fix positioning and add overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,33 +4,35 @@
 
 body, html {
     box-sizing: border-box;
+    height: 100%;
+    overflow: hidden;
 }
 
 body {
     padding: 0;
     margin: 0;
-    background: #9ca4a9;
     font-family: 'Gideon Roman', cursive;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-    align-items: center;
-    align-content: center;
-    gap: 30px;
 }
 
-.head {
-
+main {
+    display: flex; 
+    flex-flow: row wrap; 
+    justify-content: center;
+    text-align: center;
+    min-height: 100%;
 }
 
-.game {
-
+header {
+    text-align: center;
+    background-color: aqua; min-height: 100px;
 }
 
-.rules {
-
+section:nth-child(1) {
+    flex: 1 0 auto;
+    background-color: azure; 
 }
 
-.footer {
-    
+section:nth-child(2) {
+    flex: 0 0 300px;
+    background-color: red;
 }
